# FakeWorks

./: README.md  package-lock.json
.github/workflows/: automated.yaml  helloPR.yaml  moon.yaml  test_python.yaml
TD/: README.md  main.py
TD/.github/workflows/: automated.yaml  helloPR.yaml
TD/td_contenerisation/: Dockerfile.flask  Dockerfile.ngix  compose.yaml
TD/td_contenerisation/backend/: api.py
TD/td_tdd/: Dockerfile  docker-compose.yaml
TD/td_tdd/app/: main.py  test.py
application/: Makefile  README.md  docker-compose.prod.yaml  docker-compose.yaml
application/api/: Dockerfile  Dockerfile.dev  app.py  pyproject.toml
application/api/src/: app.py
application/api/src/routes/: __init__.py  process.py  result.py
application/api/src/utils/: __init__.py  rabbitMQ.py  redis.py
application/backend/: Dockerfile  app.py
application/consumer/: Dockerfile  Dockerfile.dev  app.py
application/frontend/: angular.json  dockerfile  package-lock.json  package.json
application/frontend/src/: environment.prod.ts  environment.ts  index.html  styles.scss
application/scripts/: init.sh
foundation/: .env.example  Makefile  README.md  main.tf  terraform.dev.tf  terraform.prod.tf  terraform.tf  variables.tf
foundation/modules/database/: main.tf  variables.tf
foundation/modules/domain/: main.tf  variables.tf
foundation/modules/k8s/: main.tf  variables.tf
foundation/modules/load_balancer/: main.tf  outputs.tf  variables.tf
kubernetes/: Makefile  README.md  namespace.yaml
kubernetes/apps/: ingress.yaml
kubernetes/scripts/: init.sh
(+44 files in other folders)
