[tool.poetry]
name = "fakeworks"
version = "0.1.0"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^3.1.0"
Flask-Cors = "^5.0.0"
Flask-RESTful = "^0.3.10"
redis = "^5.2.1"
Werkzeug = "^3.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"